fix link overlaps

--- a/app/assets/stylesheets/image_carousel.scss
+++ b/app/assets/stylesheets/image_carousel.scss
@@ -8,3 +8,10 @@
   }
 }
   
+.carousel-control-prev{
+
+}
+
+.carousel-control-next{
+  
+}
